        * Support cast from class muldim array to callback muldim array
        * Add postfix type cast syntax
          
          $num->(string)
          
          This is same as
          
          (string)$num;
        * Improve field access error message.
        [BUG FIX]
        * Fix the bug that dump weaken objects.
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Internally used Native APIs object_type_category_offset become always NULL.
0.9510  2021-04-05
        [CHANGE]
        * Add alias syntax
        * Improve the error messages of object-to-numeric type conversion
        * Add type comment syntax
        * Support cast from class array to interface array
        * Support cast from class array to callback array
          
        [BUG FIX]
        * Fix the bug that the runtime is not freed.
        * Fix the bug that SPVM::new_object_array can't recieve object[] type correctly.
        * Fix the bug that Exchange API call_spvm_method can recieve from object[] to element[].
        * Fix the bug that spvmcc "-B|--build-dir" option is ignored.
        
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove implicte type convertion Perl array reference to SPVM object and element[]
          This is a bug fix because the right convesion is impossible,
          but the following code raise an exception, and the code must be rewirtten.
          [Before]
          my $list = SPVM::List->new([]);
          [After]
          my $list = SPVM::List->new(SPVM::new_object_array("Int[]", []));
        * The type of argument of Hash->new is changed. Sorry, this is merely my bad mistake. The type of value of hash is any object type.
          [Before]
          static method new : Hash ($key_values : element[]);
          
          [After]
          static method new : Hash ($key_values : object[]);
        * Remove oarray type that is deprecated at 0.9509.