@@ -1,8 +1,0 @@
-class TestCase::CompileError::Weaken::ArrayNotObject {
-  use TestCase::Minimal;
-  
-  static method main : int () {
-    my $nums = new int[1];
-    weaken $nums->[0];
-  }
-}
